# soteria-cn

./: .gitignore  LICENSE  LIMITATIONS.md  QUESTIONS.md  README.md  THIRD_PARTY  dune-project  soteria-cn.opam  soteria-cn.opam.template
lib/: Minterp.ml  analysis.ml  cn_assert.ml  cn_error.ml  cn_prog.ml  consumer_monad.ml  core_value.ml  ctx.ml  driver.ml  dune  interp_monad.ml  mucore_helpers.ml  predicates.ml  producer_monad.ml  soteria_c_helpers.ml  state.ml  subst.ml  unfold_heuristics.ml  usable_mucore.ml  verify.ml
test/: dune
test/cli.t/: run.t  three.c
test/exec.t/: call.c  if_null.c  many_loops.c  run.t  sll.c
test/verif.t/: basic_incr.c  dll.c  five_six.c  get_and_free.c  incr2_alias.c  incr2_noalias.c  init_point.c  leak.c  lists.c  malloc.h  min3.c  read.c  run.t  transpose.c  transpose2.c
