(lang dune 3.23)

(name soteria-cn)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name soteria-cn)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends cn soteria soteria-c cerberus-lib fmt ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
